# prozilla-2.0.4

./: AUTHORS  CREDITS  CREDITS-old-proz  ChangeLog  Makefile  Makefile.am  Makefile.in  README  TODO  acconfig.h  acinclude.m4  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  libtool  mkinstalldirs  proz-static-rpm.spec  proz.prj  proz.pws  proz.spec
docs/: FAQ
intl/: Makefile
libprozilla/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  acinclude.m4  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  libtool  mkinstalldirs
libprozilla/docs/: HACKING  Makefile  Makefile.am  Makefile.in
libprozilla/intl/: Makefile
libprozilla/po/: Makefile  Makefile.in  POTFILES  POTFILES.in  cat-id-tbl.c  it.gmo  it.po  libprozilla.pot  nl.gmo  nl.po  pt_BR.gmo  pt_BR.po  ro.gmo  ro.po
libprozilla/src/: Makefile  Makefile.am  Makefile.in  common.h  connect.c  connect.h  connection.c  connection.h  debug.c  debug.h  download.c  download.h  ftp-retr.c  ftp-retr.h  ftp.c  ftp.h  ftpparse.c  ftpparse.h  ftpsearch.c  ftpsearch.h  http-retr.c  http-retr.h  http.c  http.h  logfile.c  logfile.h  main.c  misc.c  misc.h  netrc.c  netrc.h  ping.c  ping.h  prozilla.h  test.c  url.c  url.h
libprozilla/src/.deps/: connect.P  connection.P  debug.P  download.P  ftp-retr.P  ftp.P  ftpparse.P  ftpsearch.P  http-retr.P  http.P  logfile.P  main.P  misc.P  netrc.P  ping.P  url.P
man/: Makefile  Makefile.am  Makefile.in  proz.1
po/: ChangeLog  Makefile  Makefile.in  POTFILES  POTFILES.in  es.po  fr.gmo  fr.po  it.gmo  it.po  nl.gmo  nl.po  proz.pot  prozgui.pot  pt_BR.gmo  pt_BR.po  ro.gmo  ro.po
src/: .cvsignore  Makefile  Makefile.am  Makefile.in  download_win.cpp  download_win.cpp~  download_win.h  ftps_win.h  ftpsearch_win.cpp  ftpsearch_win.h  index.html  init.cpp  init.h  interface.c  interface.h  main.cpp  main.h  misc.cpp  misc.h  prefs.cpp  prefs.h
src/.deps/: download_win.Po  ftpsearch_win.Po  init.Po  interface.Po  main.Po  misc.Po  prefs.Po
src/images/: BigProZilla01.xpm  Pz12.xpm  Pzdlwin.xpm  pause.xpm  play.xpm
